Fix flex on mobile

--- a/src/webparts/workMinders/components/contentView/ContentView.module.scss
+++ b/src/webparts/workMinders/components/contentView/ContentView.module.scss
@@ -26,9 +26,11 @@
   flex-direction: row;
   align-items: center;
   gap: 10px;
+  min-width: 0;
 }
 
 .wm_sidebarOpen {
   cursor: pointer;
   color: gray;
+  flex-shrink: 0;
 }
